<resources>
    <string name="app_name">Image Machine</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort By</string>
    <string name="action_qr">Code Reader</string>
    <string name="machine_id">Machine ID</string>
    <string name="machine_name">Machine Name</string>
    <string name="machine_type">Machine Type</string>
    <string name="machine_qr">Machine QR Code</string>
    <string name="machine_date">Last Maintenance Date</string>
    <string name="btnSave">Save</string>
    <string name="btnPickImg">Select Img</string>
    <string name="btnNextImg">Next Img</string>
</resources>
