<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAddMID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:fontFamily="monospace"
                android:text="@string/machine_id"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddMID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:focusable="auto"
                android:fontFamily="monospace"
                android:inputType="number"
                android:textAlignment="textEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAddMName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/machine_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddMName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="monospace"
                android:inputType="textPersonName"
                android:textAlignment="textEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAddMType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/machine_type"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddMType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="monospace"
                android:inputType="textPersonName"
                android:textAlignment="textEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAddMQR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/machine_qr"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddMQR"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="monospace"
                android:inputType="number"
                android:textAlignment="textEnd" />
        </TableRow>

        <TableRow
            android:layout_width="256dp"
            android:layout_height="82dp">

            <TextView
                android:id="@+id/tvAddMDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/machine_date"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddMDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="monospace"
                android:inputType="date"
                android:textAlignment="textEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnPickImg" />

                <Button
                    android:id="@+id/btnNextImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnImg"
                    android:layout_marginTop="25sp"
                    android:text="@string/btnNextImg" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/btnSave" />
        </TableRow>

    </TableLayout>
</ScrollView>